--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Authify é um sistema de autenticação e autorização seguro e escalável, projetado para aplicativos Web modernos. Utilizando JSON Web Tokens (JWT), o Authify oferece uma solução robusta para gerenciar a autenticação de usuários, a autorização de acesso e a proteção de rotas sensíveis.",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "tsx watch src/app.ts"
     },
     "repository": {
         "type": "git",
@@ -15,5 +15,23 @@
     "bugs": {
         "url": "https://github.com/alvaroeduardo/Authify/issues"
     },
-    "homepage": "https://github.com/alvaroeduardo/Authify#readme"
+    "homepage": "https://github.com/alvaroeduardo/Authify#readme",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "dotenv": "^16.4.1",
+        "fastify": "^4.26.0",
+        "fs": "^0.0.1-security",
+        "jsonwebtoken": "^9.0.2",
+        "zod": "^3.22.4"
+    },
+    "devDependencies": {
+        "@prisma/client": "^5.9.0",
+        "@types/bcrypt": "^5.0.2",
+        "@types/dotenv": "^8.2.0",
+        "@types/jsonwebtoken": "^9.0.5",
+        "@types/node": "^20.11.14",
+        "prisma": "^5.9.0",
+        "tsx": "^4.7.0",
+        "typescript": "^5.3.3"
+    }
 }
