--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "fastify": "^4.26.0",
         "fs": "^0.0.1-security",
         "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^6.9.9",
         "zod": "^3.22.4"
     },
     "devDependencies": {
@@ -30,7 +31,8 @@
         "@types/dotenv": "^8.2.0",
         "@types/jsonwebtoken": "^9.0.5",
         "@types/node": "^20.11.14",
-        "prisma": "^5.9.0",
+        "@types/nodemailer": "^6.4.14",
+        "prisma": "^5.9.1",
         "tsx": "^4.7.0",
         "typescript": "^5.3.3"
     }
